--- a/Tailwind/016_resume_live.html
+++ b/Tailwind/016_resume_live.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>tailwindcss</title>
+    <title>Tailwindcss</title>
   </head>
   <body>
     <div class="flex mt-32 ml-32">
