로또 번호 추첨기

--- a/JavaScript/로또 번호 추첨기/index.html
+++ b/JavaScript/로또 번호 추첨기/index.html
@@ -10,14 +10,13 @@
   <body>
     <h1>로또 번호 추첨기</h1>
     <script>
-      const lotto = [];
+      let lotto = [];
       while (lotto.length < 6) {
-        const num = parseInt(Math.random() * 45 + 1);
+        let num = parseInt(Math.random() * 45 + 1);
         if (lotto.indexOf(num) == -1) {
           lotto.push(num);
         }
       }
-      
       lotto.sort((a, b) => a - b);
       document.write("<div class='ball ball1'>" + lotto[0] + "</div>");
       document.write("<div class='ball ball2'>" + lotto[1] + "</div>");
