로또 번호 추첨기

--- a/JavaScript/로또 번호 추첨기/index.html
+++ b/JavaScript/로또 번호 추첨기/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>로또 번호 추첨기</h1>
+    <h1>Lotto Machine</h1>
     <script>
       let lotto = [];
       while (lotto.length < 6) {
