--- a/jQuery/002.html
+++ b/jQuery/002.html
@@ -23,7 +23,10 @@
     <div>
       <div id="title">jQuery의 주요 특징</div>
       <div id="content">
-        <p>jQuery는 자바스크립트 라이브러리로, 웹 페이지의 DOM 조작, 이벤트 처리, 애니메이션 및 AJAX 기능을 간편하게 사용할 수 있는 도구입니다. 다음은 jQuery의 주요 특징들입니다.</p>
+        <p>
+          jQuery는 자바스크립트 라이브러리로, 웹 페이지의 DOM 조작, 이벤트 처리, 애니메이션 및 AJAX
+          기능을 간편하게 사용할 수 있는 도구이며 다음은 jQuery의 주요 특징들입니다.
+        </p>
         <ul>
           <li class="item">간결한 문법</li>
           <li class="item">높은 호환성</li>
