add: react 초심 되살리기

--- a/React/react-webgame/1. 구구단/like-button.html
+++ b/React/react-webgame/1. 구구단/like-button.html
@@ -16,31 +16,47 @@
     <!-- 배포용 -->
     <!--<script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>-->
     <!--<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>-->
-
-    <script>
+    <!-- babel -->
+    <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script type="text/babel">
       'use strict';
 
-      const e = React.createElement;
+      // const e = React.createElement;
 
       // const LikeButton = () => {};
-      // function LikeButton() {}
+      function LikeButton() {
+        const [liked, setLiked] = React.useState(false);
 
-      class LikeButton extends React.Component {
-        constructor(props) {
-          super(props);
-          this.state = { liked: false };
+        if (liked) {
+          return 'You liked this.';
         }
-        render() {
-          if (this.state.liked) {
-            return 'You liked this.';
-          }
-
-          return e('button', { onClick: () => this.setState({ liked: true }) }, 'Like');
-        }
+        return (
+          <button
+            onClick={() => {
+              setLiked(true);
+            }}
+          >
+            like
+          </button>
+        );
       }
+
+      // class LikeButton extends React.Component {
+      //   constructor(props) {
+      //     super(props);
+      //     this.state = { liked: false };
+      //   }
+      //   render() {
+      //     if (this.state.liked) {
+      //       return 'You liked this.';
+      //     }
+
+      //     return e('button', { onClick: () => this.setState({ liked: true }) }, 'Like');
+      //   }
+      // }
     </script>
-    <script>
-      ReactDOM.createRoot(document.querySelector('#root')).render(e(LikeButton));
+    <script type="text/babel">
+      ReactDOM.createRoot(document.querySelector('#root')).render(<LikeButton />); // React 18버전 코드
     </script>
   </body>
 </html>
